Fix T69530: Do Not Refresh Bookmarks While Moving File Browser

Improve laggy performance while moving File Browser by not refreshing fsMenu lists in its init.

Differential Revision: https://developer.blender.org/D6112

Reviewed by Bastien Montagne